@@ -1,6 +1,8 @@
 package de.tum.in.www1.artemis.repository;
 
-import static de.tum.in.www1.artemis.config.Constants.*;
+import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
+import static de.tum.in.www1.artemis.config.Constants.SHORT_NAME_PATTERN;
+import static de.tum.in.www1.artemis.config.Constants.TITLE_NAME_PATTERN;
 import static org.springframework.data.jpa.repository.EntityGraph.EntityGraphType.LOAD;
 
 import java.time.ZonedDateTime;
@@ -9,10 +11,9 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Matcher;
 
-import javax.annotation.Nullable;
-import javax.persistence.criteria.Fetch;
-import javax.persistence.criteria.JoinType;
-import javax.validation.constraints.NotNull;
+import jakarta.annotation.Nullable;
+import jakarta.persistence.criteria.JoinType;
+import jakarta.validation.constraints.NotNull;
 
 import org.hibernate.Hibernate;
 import org.springframework.context.annotation.Profile;
@@ -24,10 +25,14 @@ import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Course;
+import de.tum.in.www1.artemis.domain.DomainObject_;
+import de.tum.in.www1.artemis.domain.Exercise_;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise;
+import de.tum.in.www1.artemis.domain.ProgrammingExercise_;
 import de.tum.in.www1.artemis.domain.assessment.dashboard.ExerciseMapEntry;
 import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
-import de.tum.in.www1.artemis.domain.participation.*;
+import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseParticipation;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
@@ -119,11 +124,11 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
         if (exercises.size() != 1) {
             throw new EntityNotFoundException("No exercise or multiple exercises found for the given project key: " + projectKey);
         }
-        return exercises.get(0);
+        return exercises.getFirst();
     }
 
     /**
-     * Get a programmingExercise with template and solution participation, each with the latest result and feedbacks.
+     * Get a programmingExercise with template participation, each with the latest result and feedbacks.
      * NOTICE: this query is quite expensive because it loads all feedback and test cases, and it includes sub queries to retrieve the latest result
      * IMPORTANT: you should generally avoid using this query except you really need all information!!
      *
@@ -134,20 +139,35 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
             SELECT DISTINCT pe
             FROM ProgrammingExercise pe
                 LEFT JOIN FETCH pe.templateParticipation tp
-                LEFT JOIN FETCH pe.solutionParticipation sp
                 LEFT JOIN FETCH tp.results AS tpr
-                LEFT JOIN FETCH sp.results AS spr
                 LEFT JOIN FETCH tpr.feedbacks tf
-                LEFT JOIN FETCH spr.feedbacks sf
                 LEFT JOIN FETCH tf.testCase
-                LEFT JOIN FETCH sf.testCase
                 LEFT JOIN FETCH tpr.submission
-                LEFT JOIN FETCH spr.submission
             WHERE pe.id = :exerciseId
                 AND (tpr.id = (SELECT MAX(re1.id) FROM tp.results re1) OR tpr.id IS NULL)
+            """)
+    Optional<ProgrammingExercise> findWithTemplateParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
+
+    /**
+     * Get a programmingExercise with solution participation, each with the latest result and feedbacks.
+     * NOTICE: this query is quite expensive because it loads all feedback and test cases, and it includes sub queries to retrieve the latest result
+     * IMPORTANT: you should generally avoid using this query except you really need all information!!
+     *
+     * @param exerciseId the id of the exercise that should be fetched.
+     * @return the exercise with the given ID, if found.
+     */
+    @Query("""
+            SELECT DISTINCT pe
+            FROM ProgrammingExercise pe
+                LEFT JOIN FETCH pe.solutionParticipation sp
+                LEFT JOIN FETCH sp.results AS spr
+                LEFT JOIN FETCH spr.feedbacks sf
+                LEFT JOIN FETCH sf.testCase
+                LEFT JOIN FETCH spr.submission
+            WHERE pe.id = :exerciseId
                 AND (spr.id = (SELECT MAX(re2.id) FROM sp.results re2) OR spr.id IS NULL)
             """)
-    Optional<ProgrammingExercise> findWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
+    Optional<ProgrammingExercise> findWithSolutionParticipationLatestResultFeedbackTestCasesById(@Param("exerciseId") long exerciseId);
 
     /**
      * Get all programming exercises that need to be scheduled: Those must satisfy one of the following requirements:
@@ -395,10 +415,9 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     @Query("""
             SELECT COUNT (DISTINCT p)
             FROM ProgrammingExerciseStudentParticipation p
-            JOIN p.submissions s
+                JOIN p.submissions s
             WHERE p.exercise.assessmentType <> de.tum.in.www1.artemis.domain.enumeration.AssessmentType.AUTOMATIC
                 AND p.exercise.exerciseGroup.exam.id = :examId
-                AND s IS NOT EMPTY
                 AND (s.type <> de.tum.in.www1.artemis.domain.enumeration.SubmissionType.ILLEGAL OR s.type IS NULL)
             """)
     long countLegalSubmissionsByExamIdSubmitted(@Param("examId") long examId);
@@ -636,15 +655,15 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
     /**
      * Finds a programming exercise by its id including the submissions for its solution and template participation.
      *
-     * @param exerciseId            The id of the programming exercise.
-     * @param withSubmissionResults True, if the results of the template and solution should be included as well.
-     * @param withGradingCriteria   True, if the grading instructions of the exercise should be included as well.
+     * @param exerciseId          The id of the programming exercise.
+     * @param withGradingCriteria True, if the grading instructions of the exercise should be included as well.
      * @return A programming exercise that has the given id.
      * @throws EntityNotFoundException In case no exercise with the given id exists.
      */
     @NotNull
-    default ProgrammingExercise findByIdWithTemplateAndSolutionParticipationSubmissionsAndAuxiliaryRepositoriesElseThrow(long exerciseId, boolean withSubmissionResults,
-            boolean withGradingCriteria) throws EntityNotFoundException {
+    default ProgrammingExercise findByIdWithAuxiliaryRepositoriesTeamAssignmentConfigAndGradingCriteriaElseThrow(long exerciseId, boolean withGradingCriteria)
+            throws EntityNotFoundException {
+
         final Specification<ProgrammingExercise> specification = (root, query, criteriaBuilder) -> {
             root.fetch(Exercise_.CATEGORIES, JoinType.LEFT);
             root.fetch(Exercise_.TEAM_ASSIGNMENT_CONFIG, JoinType.LEFT);
@@ -652,18 +671,6 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
 
             if (withGradingCriteria) {
                 root.fetch(Exercise_.GRADING_CRITERIA, JoinType.LEFT);
-            }
-
-            final Fetch<ProgrammingExercise, TemplateProgrammingExerciseParticipation> joinTemplateParticipation = root.fetch(ProgrammingExercise_.TEMPLATE_PARTICIPATION,
-                    JoinType.LEFT);
-            final Fetch<TemplateProgrammingExerciseParticipation, Submission> joinTemplateSubmissions = joinTemplateParticipation.fetch(Participation_.SUBMISSIONS, JoinType.LEFT);
-            final Fetch<ProgrammingExercise, SolutionProgrammingExerciseParticipation> joinSolutionParticipation = root.fetch(ProgrammingExercise_.SOLUTION_PARTICIPATION,
-                    JoinType.LEFT);
-            final Fetch<TemplateProgrammingExerciseParticipation, Submission> joinSolutionSubmissions = joinSolutionParticipation.fetch(Participation_.SUBMISSIONS, JoinType.LEFT);
-
-            if (withSubmissionResults) {
-                joinTemplateSubmissions.fetch(Submission_.RESULTS, JoinType.LEFT);
-                joinSolutionSubmissions.fetch(Submission_.RESULTS, JoinType.LEFT);
             }
 
             return null;
@@ -713,8 +720,16 @@ public interface ProgrammingExerciseRepository extends JpaRepository<Programming
      */
     @NotNull
     default ProgrammingExercise findByIdWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesElseThrow(long programmingExerciseId) throws EntityNotFoundException {
-        Optional<ProgrammingExercise> programmingExercise = findWithTemplateAndSolutionParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
-        return programmingExercise.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+        // TODO: This is a dark hack. Move this into a service where we properly load only the solution participation in the second step
+        Optional<ProgrammingExercise> programmingExerciseWithTemplate = findWithTemplateParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
+        Optional<ProgrammingExercise> programmingExerciseWithSolution = findWithSolutionParticipationLatestResultFeedbackTestCasesById(programmingExerciseId);
+
+        var withTemplate = programmingExerciseWithTemplate.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+        var withSolution = programmingExerciseWithSolution.orElseThrow(() -> new EntityNotFoundException("Programming Exercise", programmingExerciseId));
+
+        withTemplate.setSolutionParticipation(withSolution.getSolutionParticipation());
+
+        return withTemplate;
     }
 
     @NotNull
